Kaggle Notebook | notebook151d53dea4 | Version 2

--- a/UK Fuel Prices.ipynb
+++ b/UK Fuel Prices.ipynb
@@ -3,21 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bffb728d",
+   "id": "7a43085c",
    "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
+    "_cell_guid": "deb7e6e6-7bee-442c-bc53-7ba3aa1d3f0e",
+    "_uuid": "86586494-a757-4df7-a33d-e05a2a5c0c85",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:01.745218Z",
-     "iopub.status.busy": "2022-11-08T20:35:01.744401Z",
-     "iopub.status.idle": "2022-11-08T20:35:01.774022Z",
-     "shell.execute_reply": "2022-11-08T20:35:01.772661Z"
+     "iopub.execute_input": "2022-11-08T21:16:08.530463Z",
+     "iopub.status.busy": "2022-11-08T21:16:08.529996Z",
+     "iopub.status.idle": "2022-11-08T21:16:08.555796Z",
+     "shell.execute_reply": "2022-11-08T21:16:08.554607Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.038447,
-     "end_time": "2022-11-08T20:35:01.777137",
+     "duration": 0.033007,
+     "end_time": "2022-11-08T21:16:08.557906",
      "exception": false,
-     "start_time": "2022-11-08T20:35:01.738690",
+     "start_time": "2022-11-08T21:16:08.524899",
      "status": "completed"
     },
     "tags": []
@@ -53,20 +57,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3c70fff6",
+   "execution_count": null,
+   "id": "88118925",
    "metadata": {
+    "papermill": {
+     "duration": 0.002346,
+     "end_time": "2022-11-08T21:16:08.563260",
+     "exception": false,
+     "start_time": "2022-11-08T21:16:08.560914",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9dd33c60",
+   "metadata": {
+    "_cell_guid": "4b55a40d-53e3-4b3c-a539-7d3f0536b428",
+    "_uuid": "f5b9c04f-5e7a-4f83-bbed-389f80a36ddf",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:01.785069Z",
-     "iopub.status.busy": "2022-11-08T20:35:01.784293Z",
-     "iopub.status.idle": "2022-11-08T20:35:03.196673Z",
-     "shell.execute_reply": "2022-11-08T20:35:03.195701Z"
+     "iopub.execute_input": "2022-11-08T21:16:08.570424Z",
+     "iopub.status.busy": "2022-11-08T21:16:08.569741Z",
+     "iopub.status.idle": "2022-11-08T21:16:09.689834Z",
+     "shell.execute_reply": "2022-11-08T21:16:09.689115Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 1.419319,
-     "end_time": "2022-11-08T20:35:03.199458",
+     "duration": 1.125638,
+     "end_time": "2022-11-08T21:16:09.691466",
      "exception": false,
-     "start_time": "2022-11-08T20:35:01.780139",
+     "start_time": "2022-11-08T21:16:08.565828",
      "status": "completed"
     },
     "tags": []
@@ -172,19 +199,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "627c3dda",
+   "id": "cbb5b141",
    "metadata": {
+    "_cell_guid": "852e1c1c-a90f-47de-b2fb-cae37b551f9f",
+    "_uuid": "0a4421cf-6a73-4f5d-a34a-5e8429c80b87",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:03.209024Z",
-     "iopub.status.busy": "2022-11-08T20:35:03.207274Z",
-     "iopub.status.idle": "2022-11-08T20:35:03.551962Z",
-     "shell.execute_reply": "2022-11-08T20:35:03.550436Z"
+     "iopub.execute_input": "2022-11-08T21:16:09.698819Z",
+     "iopub.status.busy": "2022-11-08T21:16:09.697949Z",
+     "iopub.status.idle": "2022-11-08T21:16:10.007725Z",
+     "shell.execute_reply": "2022-11-08T21:16:10.006379Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.352698,
-     "end_time": "2022-11-08T20:35:03.555202",
+     "duration": 0.316082,
+     "end_time": "2022-11-08T21:16:10.010368",
      "exception": false,
-     "start_time": "2022-11-08T20:35:03.202504",
+     "start_time": "2022-11-08T21:16:09.694286",
      "status": "completed"
     },
     "tags": []
@@ -218,19 +251,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d7f777f8",
+   "id": "6b36ba94",
    "metadata": {
+    "_cell_guid": "eb90faa9-2443-4d44-a988-15b44967ad72",
+    "_uuid": "30c5466b-8c45-4add-bf92-eacafd46107d",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:03.565776Z",
-     "iopub.status.busy": "2022-11-08T20:35:03.565148Z",
-     "iopub.status.idle": "2022-11-08T20:35:04.304949Z",
-     "shell.execute_reply": "2022-11-08T20:35:04.303385Z"
+     "iopub.execute_input": "2022-11-08T21:16:10.018453Z",
+     "iopub.status.busy": "2022-11-08T21:16:10.018003Z",
+     "iopub.status.idle": "2022-11-08T21:16:10.585251Z",
+     "shell.execute_reply": "2022-11-08T21:16:10.584303Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.748626,
-     "end_time": "2022-11-08T20:35:04.308098",
+     "duration": 0.573452,
+     "end_time": "2022-11-08T21:16:10.587163",
      "exception": false,
-     "start_time": "2022-11-08T20:35:03.559472",
+     "start_time": "2022-11-08T21:16:10.013711",
      "status": "completed"
     },
     "tags": []
@@ -239,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x7f2378150f10>"
+       "<seaborn.axisgrid.JointGrid at 0x7f9fb1d7abd0>"
       ]
      },
      "execution_count": 4,
@@ -264,19 +303,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2595f7a5",
+   "id": "1c1598f0",
    "metadata": {
+    "_cell_guid": "236d4f27-07d6-4eef-b7ac-14118dd3e380",
+    "_uuid": "282d3f6a-1140-436a-a747-49ba4bd8d6e2",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:04.320106Z",
-     "iopub.status.busy": "2022-11-08T20:35:04.319678Z",
-     "iopub.status.idle": "2022-11-08T20:35:04.337035Z",
-     "shell.execute_reply": "2022-11-08T20:35:04.335096Z"
+     "iopub.execute_input": "2022-11-08T21:16:10.597946Z",
+     "iopub.status.busy": "2022-11-08T21:16:10.596917Z",
+     "iopub.status.idle": "2022-11-08T21:16:10.615698Z",
+     "shell.execute_reply": "2022-11-08T21:16:10.614133Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.027783,
-     "end_time": "2022-11-08T20:35:04.340959",
+     "duration": 0.027113,
+     "end_time": "2022-11-08T21:16:10.618898",
      "exception": false,
-     "start_time": "2022-11-08T20:35:04.313176",
+     "start_time": "2022-11-08T21:16:10.591785",
      "status": "completed"
     },
     "tags": []
@@ -308,19 +353,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91086b72",
+   "id": "cacc99e2",
    "metadata": {
+    "_cell_guid": "b6b7b523-4464-4d99-be08-9813db609ae1",
+    "_uuid": "67df2c32-a1dd-4fee-8fdd-ed381b30377f",
+    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2022-11-08T20:35:04.352543Z",
-     "iopub.status.busy": "2022-11-08T20:35:04.352154Z",
-     "iopub.status.idle": "2022-11-08T20:35:04.721687Z",
-     "shell.execute_reply": "2022-11-08T20:35:04.719322Z"
+     "iopub.execute_input": "2022-11-08T21:16:10.628485Z",
+     "iopub.status.busy": "2022-11-08T21:16:10.628157Z",
+     "iopub.status.idle": "2022-11-08T21:16:10.883962Z",
+     "shell.execute_reply": "2022-11-08T21:16:10.882768Z"
+    },
+    "jupyter": {
+     "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.379987,
-     "end_time": "2022-11-08T20:35:04.726325",
+     "duration": 0.263801,
+     "end_time": "2022-11-08T21:16:10.887037",
      "exception": false,
-     "start_time": "2022-11-08T20:35:04.346338",
+     "start_time": "2022-11-08T21:16:10.623236",
      "status": "completed"
     },
     "tags": []
@@ -372,14 +423,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 14.197785,
-   "end_time": "2022-11-08T20:35:05.661075",
+   "duration": 11.946326,
+   "end_time": "2022-11-08T21:16:11.716021",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-11-08T20:34:51.463290",
+   "start_time": "2022-11-08T21:15:59.769695",
    "version": "2.3.4"
   }
  },
